--- a/server-side/WebApi/WebApi.csproj
+++ b/server-side/WebApi/WebApi.csproj
@@ -29,7 +29,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Models\" />
+		<Folder Include="Models\Response\" />
 	</ItemGroup>
 
 </Project>
