--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,11 @@ services:
     container_name: postgres_container
     image: postgres:latest
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: keycloak
       PGDATA: /data/postgres
-    volumes:
-       - postgres:/data/postgres
     ports:
-      - "5432:5432"
+      - "54321:5432"
 
     restart: unless-stopped
 
@@ -28,24 +26,24 @@ services:
     command:
       - start-dev
 
-  nginx:
-    image: nginx:latest
-    restart: always
-    volumes:
-      - "nginx_vol:/etc/nginx/conf.d/"
-      - "certbot_vol:/var/www/certbot/"
-      - "certbot_vol:/etc/nginx/ssl/"
-    container_name: nginx
-    depends_on:
-    ports:
-      - "80:80"
-      - "443:443"
+  # nginx:
+  #   image: nginx:latest
+  #   restart: always
+  #   volumes:
+  #     - "nginx_vol:/etc/nginx/conf.d/"
+  #     - "certbot_vol:/var/www/certbot/"
+  #     - "certbot_vol:/etc/nginx/ssl/"
+  #   container_name: nginx
+  #   depends_on:
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
 
-  certbot:
-    image: certbot/certbot:latest
-    depends_on:
-      - nginx
-    volumes:
-      - "certbot_vol:/var/www/certbot/"
-      - "certbot_vol:/etc/letsencrypt/"
-      - "certbot_vol:/var/lib/letsencrypt/"
+  # certbot:
+  #   image: certbot/certbot:latest
+  #   depends_on:
+  #     - nginx
+  #   volumes:
+  #     - "certbot_vol:/var/www/certbot/"
+  #     - "certbot_vol:/etc/letsencrypt/"
+  #     - "certbot_vol:/var/lib/letsencrypt/"
