--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,50 @@
 volumes:
-  postgres_vol:
+  timetable-postgres-vol:
+  timetable-pgadmin-vol:
 
 services:
 
   postgres:
-    container_name: postgres_container
     image: postgres:latest
     environment:
-      POSTGRES_USER: keycloak
-      POSTGRES_PASSWORD: keycloak
+      POSTGRES_USER: ${POSTGRES_USERNAME}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       PGDATA: "/var/lib/postgresql/data/pgdata"
     volumes:
-      - postgres_vol:/var/lib/postgresql/data
-    ports:
-      - "54321:5432"
+      - timetable-postgres-vol:/var/lib/postgresql/data
 
-    restart: unless-stopped
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
+    ports:
+      - 82:80
+    volumes:
+      - timetable-pgadmin-vol:/var/lib/pgadmin
+    depends_on:
+      - postgres
+
 
   keycloak:
     image: quay.io/keycloak/keycloak:latest
     environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
+      KEYCLOAK_ADMIN: ${KEYCLOAK_USERNAME}
+      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_PASSWORD}
       KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres/keycloak
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: keycloak
+      KC_DB_URL: jdbc:postgresql://postgres/postgres
+      KC_DB_USERNAME: ${POSTGRES_USERNAME}
+      KC_DB_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - 9090:8080
+    depends_on:
+      - postgres
     command:
       - start-dev
+
+
+
 
   # nginx:
   #   image: nginx:latest
