--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -1,5 +1,5 @@
-POSTGRES_USERNAME=admin
-POSTGRES_PASSWORD=admin
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=postgres
 
 PGADMIN_EMAIL=admin@pg.pg
 PGADMIN_PASSWORD=admin
