--- a/server-side/WebApi/appsettings.json
+++ b/server-side/WebApi/appsettings.json
@@ -11,5 +11,11 @@
     "ConnectionString": "Host=localhost;Username=postgres;Password=postgres;Database=postgres",
     "Collation": "",
     "AdminDbName": "postgres"
+  },
+
+  "IdentityConfiguration": {
+    "MetadataAddress": "http://localhost:9090/realms/timetable/.well-known/openid-configuration",
+    "Authority": "http://localhost:9090/realms/timetable",
+    "Audience": "account"
   }
 }
