--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USERNAME}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       PGDATA: "/var/lib/postgresql/data/pgdata"
+    ports:
+      - 5433:5432
     volumes:
       - timetable-postgres-vol:/var/lib/postgresql/data
 
