--- a/server-side/WebApi/appsettings.json
+++ b/server-side/WebApi/appsettings.json
@@ -8,14 +8,20 @@
   "AllowedHosts": "*",
 
   "PostgresConfiguration": {
-    "ConnectionString": "Host=localhost;Username=postgres;Password=postgres;Database=postgres",
+    "ConnectionString": "Host=localhost;Port=5432;Username=aspnet;Password=aspnet;Database=aspnet",
     "Collation": "",
     "AdminDbName": "postgres"
   },
 
-  "IdentityConfiguration": {
-    "MetadataAddress": "http://localhost:9090/realms/timetable/.well-known/openid-configuration",
-    "Authority": "http://localhost:9090/realms/timetable",
-    "Audience": "account"
+  "Keycloak": {
+    "realm": "timetable",
+    "auth-server-url": "http://localhost:8080/",
+    "ssl-required": "none",
+    "resource": "client-id",
+    "verify-token-audience": false,
+    "credentials": {
+      "secret": "xxx"
+    },
+    "confidential-port": 0
   }
 }
