--- a/server-side/Auth/Auth.csproj
+++ b/server-side/Auth/Auth.csproj
@@ -6,8 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Throw" Version="1.4.0" />
-  </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Keycloak.AuthServices.Authentication" Version="1.6.0" />
+		<PackageReference Include="Keycloak.AuthServices.Authorization" Version="1.6.0" />
+	</ItemGroup>
+	
 </Project>
