--- a/server-side/WebApi/WebApi.csproj
+++ b/server-side/WebApi/WebApi.csproj
@@ -15,11 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="HotChocolate.AspNetCore" Version="13.8.1" />
-		<PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="13.8.1" />
-		<PackageReference Include="HotChocolate.Data.EntityFramework" Version="13.8.1" />
-		<PackageReference Include="Keycloak.AuthServices.Authentication" Version="1.6.0" />
-		<PackageReference Include="Keycloak.AuthServices.Authorization" Version="1.6.0" />
+		<PackageReference Include="FluentValidation" Version="11.9.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -34,11 +30,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\Auth\Auth.csproj" />
+		<ProjectReference Include="..\GraphQL\GraphQL.csproj" />
 		<ProjectReference Include="..\Services\Services.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<Folder Include="Models\Response\" />
+		<Folder Include="Validation\Models\" />
 	</ItemGroup>
 
 </Project>
