--- a/server-side/Auth/Auth.csproj
+++ b/server-side/Auth/Auth.csproj
@@ -8,6 +8,7 @@
 
 
 	<ItemGroup>
+		<PackageReference Include="IdentityModel" Version="6.2.0" />
 		<PackageReference Include="Keycloak.AuthServices.Authentication" Version="1.6.0" />
 		<PackageReference Include="Keycloak.AuthServices.Authorization" Version="1.6.0" />
 	</ItemGroup>
