--- a/server-side/GraphQL/GraphQL.csproj
+++ b/server-side/GraphQL/GraphQL.csproj
@@ -15,6 +15,7 @@
 
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Auth\Auth.csproj" />
 	  <ProjectReference Include="..\Repository\Repository.csproj" />
 	</ItemGroup>
 	
