--- a/client-side/timetable-react/package.json
+++ b/client-side/timetable-react/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.8",
     "graphql": "^16.8.1",
+    "keycloak-js": "^23.0.3",
     "ky": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
