рефакторинг точки входа

--- a/server-side/WebApi/appsettings.json
+++ b/server-side/WebApi/appsettings.json
@@ -5,13 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+
   "AllowedHosts": "*",
+
+
 
   "PostgresConfiguration": {
     "ConnectionString": "Host=localhost;Port=5432;Username=aspnet;Password=aspnet;Database=aspnet",
     "Collation": "",
     "AdminDbName": "postgres"
   },
+
+
 
   "Keycloak": {
     "realm": "timetable",
@@ -23,5 +29,13 @@
       "secret": "xxx"
     },
     "confidential-port": 0
+  },
+
+
+
+  "CorsConfiguration": {
+    "Origins": [
+      "http://localhost:3000"
+    ]
   }
 }
