--- a/server-side/WebApi/WebApi.csproj
+++ b/server-side/WebApi/WebApi.csproj
@@ -15,6 +15,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Controllers\TestContoller.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="Controllers\TestContoller.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
