убрал лишнюю опцию из конфига бд и немного поправил контекст бд

--- a/server-side/WebApi/appsettings.json
+++ b/server-side/WebApi/appsettings.json
@@ -13,8 +13,7 @@
 
   "PostgresConfiguration": {
     "ConnectionString": "Host=localhost;Port=5432;Username=aspnet;Password=aspnet;Database=aspnet",
-    "Collation": "",
-    "AdminDbName": "postgres"
+    "Collation": ""
   },
 
 
