--- a/client-side/timetable-react/package.json
+++ b/client-side/timetable-react/package.json
@@ -15,6 +15,7 @@
     "graphql": "^16.8.1",
     "keycloak-js": "^23.0.3",
     "ky": "^1.1.3",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
