--- a/client-side/timetable-react/package.json
+++ b/client-side/timetable-react/package.json
@@ -17,7 +17,8 @@
     "ky": "^1.1.3",
     "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.0",
