добавил библу тгбота на бек

--- a/server-side/WebApi/appsettings.json
+++ b/server-side/WebApi/appsettings.json
@@ -36,5 +36,12 @@
     "Origins": [
       "http://localhost:3000"
     ]
+  },
+
+
+  "BotConfiguration": {
+    "BotToken":  "",
+    "WebhookSecretToken": "",
+    "WebhookUrl" : ""
   }
 }
