--- a/server-side/TelegramBot/TelegramBot.csproj
+++ b/server-side/TelegramBot/TelegramBot.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Repository\Repository.csproj" />
-    <ProjectReference Include="..\TelegramBot\TelegramBot.csproj" />
-    <ProjectReference Include="..\Validation\Validation.csproj" />
+    <PackageReference Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
 
 </Project>
