--- a/client-side/timetable-react/package.json
+++ b/client-side/timetable-react/package.json
@@ -17,7 +17,9 @@
         "ky": "^1.2.0",
         "moment": "^2.30.1",
         "react": "^18.2.0",
+        "react-cookie": "^7.0.1",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.21.3",
         "use-immer": "^0.9.0"
     },
     "devDependencies": {
