--- a/client-side/timetable-react/package.json
+++ b/client-side/timetable-react/package.json
@@ -13,11 +13,11 @@
     "dependencies": {
         "@apollo/client": "^3.8.10",
         "graphql": "^16.8.1",
+        "js-cookie": "^3.0.5",
         "keycloak-js": "^23.0.4",
         "ky": "^1.2.0",
         "moment": "^2.30.1",
         "react": "^18.2.0",
-        "react-cookie": "^7.0.1",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.3",
         "use-immer": "^0.9.0"
@@ -26,6 +26,7 @@
         "@graphql-codegen/cli": "^5.0.0",
         "@graphql-codegen/client-preset": "^4.1.0",
         "@graphql-typed-document-node/core": "^3.2.0",
+        "@types/js-cookie": "^3.0.6",
         "@types/react": "^18.2.48",
         "@types/react-dom": "^18.2.18",
         "@typescript-eslint/eslint-plugin": "^6.19.0",
