--- a/client-side/timetable-react/package.json
+++ b/client-side/timetable-react/package.json
@@ -14,11 +14,12 @@
         "@apollo/client": "^3.8.10",
         "graphql": "^16.8.1",
         "js-cookie": "^3.0.5",
-        "keycloak-js": "^23.0.4",
         "ky": "^1.2.0",
         "moment": "^2.30.1",
+        "oidc-client-ts": "^2.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-oidc-context": "^2.3.1",
         "react-router-dom": "^6.21.3",
         "use-immer": "^0.9.0"
     },
