--- a/client-side/timetable-next/package.json
+++ b/client-side/timetable-next/package.json
@@ -9,6 +9,11 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@chakra-ui/next-js": "^2.2.0",
+        "@chakra-ui/react": "^2.8.2",
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "framer-motion": "^11.0.3",
         "ky": "^1.2.0",
         "next": "14.1.0",
         "next-auth": "^4.24.5",
