--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -59,7 +59,9 @@ services:
 
 
   nginx:
-    image: nginx:1.24.0
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     restart: always
     volumes:
       - "timetable-nginx-vol:/etc/nginx/conf.d/"
