изменил настройки деплоя nginx, вроде работает

--- a/deploy/nginx/conf/default.conf
+++ b/deploy/nginx/conf/default.conf
@@ -36,5 +36,5 @@ server {
 #     ssl_certificate /etc/nginx/ssl/live/xxx/fullchain.pem;
 #     ssl_certificate_key /etc/nginx/ssl/live/xxx/privkey.pem;
     
-    include routes;
+#    include routes;
 # }
