--- a/deploy/nginx/Dockerfile
+++ b/deploy/nginx/Dockerfile
@@ -1,4 +1,8 @@
 FROM nginx:stable
 RUN rm /etc/nginx/conf.d/default.conf
 # COPY content /usr/share/nginx/html
-COPY conf /etc/nginx
+
+COPY conf/default.conf /etc/nginx/conf.d
+
+COPY conf/proxy_params /etc/nginx/
+COPY conf/routes /etc/nginx/
