изменил деплой kc и добавил пример .dev на nextjs

--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -6,3 +6,7 @@ PGADMIN_PASSWORD=admin
 
 KEYCLOAK_USERNAME=admin
 KEYCLOAK_PASSWORD=admin
+KEYCLOAK_DB_USERNAME=keycloak
+KEYCLOAK_DB_PASSWORD=keycloak
+
+KEYCLOAK_HOSTNAME_URL=http://localhost:8080/auth
