--- a/client-side/timetable-next/package.json
+++ b/client-side/timetable-next/package.json
@@ -6,14 +6,20 @@
         "dev": "next dev -p 3001",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "compile": "graphql-codegen"
     },
     "dependencies": {
+        "@apollo/client": "^3.9.2",
         "@chakra-ui/next-js": "^2.2.0",
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "@graphql-codegen/cli": "^5.0.0",
+        "@graphql-codegen/client-preset": "^4.1.0",
+        "@graphql-typed-document-node/core": "^3.2.0",
         "framer-motion": "^11.0.3",
+        "graphql": "^16.8.1",
         "ky": "^1.2.0",
         "moment": "^2.30.1",
         "next": "14.1.0",
