фронт берет инфу пока из jsona

--- a/client-side/timetable-next/.env 
+++ b/client-side/timetable-next/.env 
@@ -5,7 +5,7 @@ KEYCLOAK_ISSUER="http://localhost/auth/realms/timetable"
 
 # Next Auth Config
 NEXTAUTH_SECRET="secret"
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost"
 
 # API Config
 REST_URL="http://localhost/api"
