изменил деплой нгинкса

--- a/deploy/nginx/conf/default.conf
+++ b/deploy/nginx/conf/default.conf
@@ -2,26 +2,24 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name localhost;
-
-    include routes;
+    include conf.d/locations;
 }
 
-server {
-    listen 80;
-    listen [::]:80;
+# server {
+#     listen 80;
+#     listen [::]:80;
 
-    server_name xxx www.xxx;
-    server_tokens off;
+#     server_name xxx www.xxx;
+#     server_tokens off;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+#     location /.well-known/acme-challenge/ {
+#         root /var/www/certbot;
+#     }
 
-    location / {
-        return 301 https://xxx$request_uri;
-    }
-}
+#     location / {
+#         return 301 https://xxx$request_uri;
+#     }
+# }
 
 # docker compose run --rm  certbot certonly --webroot --webroot-path /var/www/certbot/ -d xxx
 # Расскоментить ниже, когда появится сертификат.
@@ -36,5 +34,5 @@ server {
 #     ssl_certificate /etc/nginx/ssl/live/xxx/fullchain.pem;
 #     ssl_certificate_key /etc/nginx/ssl/live/xxx/privkey.pem;
     
-#    include routes;
+#    include conf.d/locations;
 # }
