--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,10 +1,10 @@
 name: timetable
 
 volumes:
-  timetable-postgres-vol:
-  timetable-pgadmin-vol:
-  timetable-nginx-vol:
-  timetable-certbot-vol:
+  postgres-vol:
+  pgadmin-vol:
+  nginx-conf-vol:
+  certbot-vol:
 
 
 services:
@@ -16,7 +16,7 @@ services:
     image: timetable-postgres
 
     volumes:
-      - timetable-postgres-vol:/var/lib/postgresql/data
+      - postgres-vol:/var/lib/postgresql/data
     ports:
       - 5433:5432
 
@@ -31,7 +31,7 @@ services:
   #   ports:
   #     - 82:80
   #   volumes:
-  #     - timetable-pgadmin-vol:/var/lib/pgadmin
+  #     - pgadmin-vol:/var/lib/pgadmin
 
   #   depends_on:
   #     - postgres
@@ -68,9 +68,9 @@ services:
     image: timetable-nginx
 
     volumes:
-      - "timetable-nginx-vol:/etc/nginx/conf.d/"
-      - "timetable-certbot-vol:/var/www/certbot/"
-      - "timetable-certbot-vol:/etc/nginx/ssl/"
+      - "nginx-conf-vol:/etc/nginx/conf.d/"
+      - "certbot-vol:/var/www/certbot/"
+      - "certbot-vol:/etc/nginx/ssl/"
     ports:
       - "80:80"
       - "443:443"
@@ -82,9 +82,9 @@ services:
     image: certbot/certbot:v2.8.0
 
     volumes:
-      - "timetable-certbot-vol:/var/www/certbot/"
-      - "timetable-certbot-vol:/etc/letsencrypt/"
-      - "timetable-certbot-vol:/var/lib/letsencrypt/"
+      - "certbot-vol:/var/www/certbot/"
+      - "certbot-vol:/etc/letsencrypt/"
+      - "certbot-vol:/var/lib/letsencrypt/"
     depends_on:
       - nginx
 
