--- a/client-side/timetable-next/.dockerignore
+++ b/client-side/timetable-next/.dockerignore
@@ -1,24 +1,8 @@
-**/.classpath
-**/.dockerignore
-**/.env
-**/.git
-**/.gitignore
-**/.project
-**/.settings
-**/.toolstarget
-**/.vs
-**/.vscode
-**/*.*proj.user
-**/*.dbmdl
-**/*.jfm
-**/charts
-**/docker-compose*
-**/compose*
-**/Dockerfile*
-**/node_modules
-**/npm-debug.log
-**/obj
-**/secrets.dev.yaml
-**/values.dev.yaml
-LICENSE
+node_modules
+.next
+.vscode
+.gitignore
 README.md
+.dockerignore
+.git
+LICENSE
