--- a/client-side/timetable-next/package.json
+++ b/client-side/timetable-next/package.json
@@ -15,6 +15,8 @@
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
         "framer-motion": "^11.0.3",
+        "graphql": "^16.8.1",
+        "graphql-request": "^6.1.0",
         "moment": "^2.30.1",
         "next": "14.1.0",
         "next-auth": "^4.24.5",
