--- a/client-side/timetable-next/package.json
+++ b/client-side/timetable-next/package.json
@@ -21,7 +21,8 @@
         "next": "14.1.0",
         "next-auth": "^4.24.5",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "use-immer": "^0.9.0"
     },
     "devDependencies": {
         "@types/node": "^20",
