вынес строку подключения кейклока в dotenv из компоуза

--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -8,5 +8,5 @@ KEYCLOAK_USERNAME=admin
 KEYCLOAK_PASSWORD=admin
 KEYCLOAK_DB_USERNAME=keycloak
 KEYCLOAK_DB_PASSWORD=keycloak
-
+KEYCLOAK_DB_URL=jdbc:postgresql://postgres/keycloak
 KEYCLOAK_HOSTNAME_URL=http://localhost:8080/auth
