фронтенд теперь будет хоститься на верселевских облаках

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -75,11 +75,10 @@ services:
       - "certbot-vol:/var/lib/letsencrypt/"
     depends_on:
       - nginx
-
-  frontend:
-    build:
-      context: ./../client-side/timetable-next
-      dockerfile: Dockerfile
-    image: timetable-next
-    depends_on:
-      - nginx
+  # frontend:
+  #   build:
+  #     context: ./../client-side/timetable-next
+  #     dockerfile: Dockerfile
+  #   image: timetable-next
+  #   depends_on:
+  #     - nginx
