--- a/client-side/timetable-next/package.json
+++ b/client-side/timetable-next/package.json
@@ -14,6 +14,7 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "client-only": "^0.0.1",
         "framer-motion": "^11.0.3",
         "graphql": "^16.8.1",
         "graphql-request": "^6.1.0",
@@ -23,6 +24,7 @@
         "next-auth": "^4.24.5",
         "react": "^18",
         "react-dom": "^18",
+        "server-only": "^0.0.1",
         "use-immer": "^0.9.0"
     },
     "devDependencies": {
@@ -32,6 +34,6 @@
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
         "typescript": "^5",
-        "vercel": "^33.5.0"
+        "vercel": "^32.3.0"
     }
 }
