набросал немного серверных экшенов вместо обычных методов запросов

--- a/client-side/timetable-next/.env.development
+++ b/client-side/timetable-next/.env.development
@@ -8,5 +8,5 @@ NEXTAUTH_SECRET="bebra"
 NEXTAUTH_URL="http://localhost:3001"
 
 # API Config
-REST_URL="http://localhost/api"
-GRAPHQL_URL="http://localhost/api/graphql"
+REST_URL="http://localhost:5012/api"
+GRAPHQL_URL="http://localhost:5012/api/graphql"
