--- a/server-side/GraphQL/GraphQL.csproj
+++ b/server-side/GraphQL/GraphQL.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="HotChocolate.AspNetCore" Version="13.8.1" />
 		<PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="13.8.1" />
 		<PackageReference Include="HotChocolate.Data.EntityFramework" Version="13.8.1" />
+		<PackageReference Include="HotChocolate.PersistedQueries.FileSystem" Version="13.8.1" />
 	</ItemGroup>
 
 
@@ -18,5 +19,5 @@
 	  <ProjectReference Include="..\Auth\Auth.csproj" />
 	  <ProjectReference Include="..\Repository\Repository.csproj" />
 	</ItemGroup>
-	
+
 </Project>
