--- a/client-side/timetable-next/package.json
+++ b/client-side/timetable-next/package.json
@@ -22,7 +22,8 @@
         "react": "^18",
         "react-dom": "^18",
         "server-only": "^0.0.1",
-        "use-immer": "^0.9.0"
+        "use-immer": "^0.9.0",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/node": "^20",
@@ -31,6 +32,6 @@
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
         "typescript": "^5",
-        "vercel": "^33.5.1"
+        "vercel": "^32.3.0"
     }
 }
