--- a/client-side/timetable-next/package.json
+++ b/client-side/timetable-next/package.json
@@ -21,6 +21,7 @@
         "next-auth": "^4.24.5",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.50.1",
         "server-only": "^0.0.1",
         "use-immer": "^0.9.0",
         "zod": "^3.22.4"
