--- a/client-side/timetable-next/package.json
+++ b/client-side/timetable-next/package.json
@@ -23,6 +23,7 @@
         "react-dom": "^18",
         "react-hook-form": "^7.50.1",
         "server-only": "^0.0.1",
+        "sharp": "^0.33.2",
         "use-immer": "^0.9.0",
         "zod": "^3.22.4"
     },
