изменил немного настройки нгинкса

--- a/deploy/nginx/conf/default.conf
+++ b/deploy/nginx/conf/default.conf
@@ -2,8 +2,45 @@ server {
     listen 80;
     listen [::]:80;
 
-    include conf.d/locations;
+    include conf.d/upstreams;
+    include conf.d/proxy_params;
+
+    location /api {
+
+        location /api/auth {
+            proxy_pass $upstream_frontend;
+        }
+
+        proxy_pass $upstream_backend;
+    }
+
+    location ~ ^/auth/(realms|resources|robots.txt) {
+
+        proxy_pass $upstream_keycloak;
+    }
+
+    location / {
+        proxy_pass $upstream_frontend;
+    }
 }
+
+# server {
+#     listen 80;
+#     listen [::]:80;
+#     server_name localhost;
+
+#     include conf.d/upstreams;
+
+#     location /auth {
+#         include conf.d/proxy_params;
+#         proxy_pass $upstream_keycloak;
+#     }
+
+#     location / {
+#         return 308 http://domain$request_uri;
+#     }
+# }
+
 
 # server {
 #     listen 80;
