в конфиге нгинкса увеличил прокси буфер для кейклока

--- a/deploy/nginx/conf/default.conf
+++ b/deploy/nginx/conf/default.conf
@@ -15,7 +15,10 @@ server {
     }
 
     location ~ ^/auth/(realms|resources|robots.txt) {
-
+        proxy_buffer_size   128k;
+        proxy_buffers   4 256k;
+        proxy_busy_buffers_size   256k;
+        
         proxy_pass $upstream_keycloak;
     }
 
