изменил немного конфиг nginx, добавил auth/js чтобы работал kc

--- a/deploy/nginx/conf/default.conf
+++ b/deploy/nginx/conf/default.conf
@@ -1,20 +1,20 @@
 server {
     listen 80;
-    listen [::]:80;
+    listen [::]:80; # публичный сервер
 
     include conf.d/upstreams;
     include conf.d/proxy_params;
 
     location /api {
 
-        location /api/auth {
+        location /api/auth { # настройка для next-auth
             proxy_pass $upstream_frontend;
         }
 
         proxy_pass $upstream_backend;
     }
 
-    location ~ ^/auth/(realms|resources|robots.txt) {
+    location ~ ^/auth/(realms|resources|robots.txt|js) { # настройка keycloak
         proxy_buffer_size   128k;
         proxy_buffers   4 256k;
         proxy_busy_buffers_size   256k;
@@ -30,7 +30,7 @@ server {
 # server {
 #     listen 80;
 #     listen [::]:80;
-#     server_name localhost;
+#     server_name pretty-timetable.local kc.local; # этот сервер должен быть приватным
 
 #     include conf.d/upstreams;
 
@@ -40,7 +40,7 @@ server {
 #     }
 
 #     location / {
-#         return 308 http://domain$request_uri;
+#         return 308 http://domain$request_uri; # редирект на публичный сервер
 #     }
 # }
 
