добавил резолверы в конфу нгинкс

--- a/deploy/nginx/conf/new/dev.conf
+++ b/deploy/nginx/conf/new/dev.conf
@@ -1,9 +1,11 @@
 server {
     include conf.d/shared/vars.dev.conf;
     include conf.d/shared/proxy_params.conf;
+    resolver 192.168.1.1 valid=30s;
     
     listen 80;
     listen [::]:80;
+    server_name localhost;
 
     location /api {
 
@@ -26,9 +28,11 @@ server {
 
 server {
     include conf.d/shared/vars.dev.conf;
+    resolver 192.168.1.1 valid=30s;
 
     listen 8081;
     listen [::]:8081;
+    server_name devtunnel;
 
     proxy_set_header Host $dev_tunnel;
     proxy_set_header X-Forwarded-Proto https;
