--- a/deploy/nginx/conf/new/prod.conf
+++ b/deploy/nginx/conf/new/prod.conf
@@ -16,12 +16,11 @@ server {
     }
 }
 
-# docker compose run --rm  certbot certonly --webroot --webroot-path /var/www/certbot/ -d xxx
-# Расскоментить ниже, когда появится сертификат.
 
 server {
     include conf.d/shared/vars.prod.conf;
     include conf.d/shared/proxy_params.conf;
+    resolver 192.168.1.1 valid=30s;
 
     listen 443 default_server ssl http2;
     listen [::]:443 ssl http2;
