--- a/deploy/nginx/conf/new/prod.conf
+++ b/deploy/nginx/conf/new/prod.conf
@@ -22,7 +22,7 @@ server {
     include conf.d/shared/proxy_params.conf;
     resolver 192.168.1.1 valid=30s;
 
-    listen 443 default_server ssl http2;
+    listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
     server_name $domain;
