применил настройки проси буфера еще к одному локейшону, написал удобный метод для проверки ролей, сделал некст-аутх читал конфиг не из env напрямую

--- a/deploy/nginx/conf.d/dev.conf
+++ b/deploy/nginx/conf.d/dev.conf
@@ -10,6 +10,8 @@ server {
     location /api {
 
         location /api/auth {
+
+            include conf.d/shared/kc_proxy_buffer.conf;
             proxy_pass $upstream_frontend;
         }
 
@@ -38,6 +40,8 @@ server {
     location /api {
 
         location /api/auth {
+
+            include conf.d/shared/kc_proxy_buffer.conf;
             proxy_pass $upstream_frontend;
         }
 
