--- a/deploy/nginx/conf.d/prod.conf
+++ b/deploy/nginx/conf.d/prod.conf
@@ -34,6 +34,8 @@ server {
     location /api {
 
         location /api/auth {
+
+            include conf.d/shared/kc_proxy_buffer.conf;
             proxy_pass $upstream_frontend;
         }
 
