--- a/client-side/timetable-next/package.json
+++ b/client-side/timetable-next/package.json
@@ -17,8 +17,8 @@
         "client-only": "^0.0.1",
         "framer-motion": "^11.0.3",
         "moment": "^2.30.1",
-        "next": "14.1.0",
-        "next-auth": "^4.24.5",
+        "next": "^14.1.3",
+        "next-auth": "^4.24.6",
         "react": "^18",
         "react-dom": "^18",
         "server-only": "^0.0.1",
