добавил ендпоинт для миграции бд, удалил тг из бекенда пока что

--- a/server-side/WebApi/appsettings.json
+++ b/server-side/WebApi/appsettings.json
@@ -20,7 +20,7 @@
 
   "Keycloak": {
     "realm": "timetable",
-    "auth-server-url": "http://localhost:8080/",
+    "auth-server-url": "http://localhost:8080/auth",
     "ssl-required": "none",
     "resource": "client-id",
     "verify-token-audience": false,
@@ -36,12 +36,6 @@
     "Origins": [
       "http://localhost:3000"
     ]
-  },
-
-
-  "BotConfiguration": {
-    "BotToken":  "",
-    "WebhookSecretToken": "",
-    "WebhookUrl" : ""
   }
+
 }
