--- a/client-side/timetable-next/package.json
+++ b/client-side/timetable-next/package.json
@@ -18,7 +18,7 @@
         "framer-motion": "^11.0.3",
         "moment": "^2.30.1",
         "next": "^14.1.3",
-        "next-auth": "^4.24.6",
+        "next-auth": "^4.24.7",
         "react": "^18",
         "react-dom": "^18",
         "server-only": "^0.0.1",
@@ -32,7 +32,6 @@
         "@types/react-dom": "^18",
         "eslint": "^8",
         "eslint-config-next": "14.1.0",
-        "typescript": "^5",
-        "vercel": "^32.3.0"
+        "typescript": "^5"
     }
 }
