--- a/client-side/timetable-next/.env.example
+++ b/client-side/timetable-next/.env.example
@@ -1,5 +1,5 @@
 # Keycloak Auth Provider
-KEYCLOAK_CLIENT_ID="react"
+KEYCLOAK_CLIENT_ID="next-auth"
 KEYCLOAK_CLIENT_SECRET="secret"
 KEYCLOAK_ISSUER="http://localhost/auth/realms/timetable"
 
